# esp-openthread-custom

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  sdkconfig.ci.rcp_usb  sdkconfig.defaults
.github/workflows/: build.yml  release.yml
components/rgb_status/: CMakeLists.txt  Kconfig  rgb_status.c  rgb_status_stub.c
components/rgb_status/include/: rgb_status.h
main/: CMakeLists.txt  esp_ot_rcp.c
